2008-10-13  Harry Cheung <cheung@fnal.gov>

	* tag V03-14-19
	* Install performance statistics for stored data rates like for
	  received data rates. Changed the stored volume infospace variable
	  to actually give the stored volume and not the received data volume.

2008-10-12  Harry Cheung <cheung@fnal.gov>

	* tag V03-14-18
	* Changed SMPerformanceMeter to use Kurt's counter classes and also
	  introduce a rate over a time period as well as a rate over a
	  given number of samples. Both are now given and the samples and
	  time period can be set in the SM XML xdaq config file (see sm_onenode.xml)
	  Also getting  and reporting statistics for received event sizes 
	  using a new counter class, still need to get the compression ratio
	  and fragment queue size when statistics gathering is moved to 
	  the FragmentCollector

2008-10-09  Kurt Biery <biery@fnal.gov>

	* tag V03-14-17
	* Added rcmsStateListener parameters to the SM application infospace
	  as requested by Hannes to support large configurations in the online.
	  Also, modified the sequence of operations at end run to correctly
	  assign file and event count statistics. This tag requires
	  EventFilter/Utilities V00-14-16.

2008-09-23  Kurt Biery <biery@fnal.gov>

	* tag V03-14-16
	* Reduced the number of copies of INIT messages kept in memory.
	  This should eliminate the out-of-memory crashes that we have
	  observed when testing with large numbers of filter units and
	  a large HLT configuration. (Crashes were seen when the RBSender
	  web page was visited and when multiple runs were started without
	  intervening destroy/configure transitions.)

2008-09-20  Kurt Biery <biery@fnal.gov>

	* tag V03-14-15
	* Added protection against NULL registry data pointers in 
	  StorageManager::receiveRegistryMessage().  Added clearing of the
	  SMFUSenderList in the enabling() method of StorageManager.
	  These changes will hopefully reduce or eliminate the occasional